feat(backend): Added Event post/edit api & Added event_admins table & context string field in event
