# backend/openapi/model_create_event_request.go
@@ -17,9 +17,7 @@ import (
 
 
 
-type Event struct {
-
-	Id string `json:"id,omitempty"`
+type CreateEventRequest struct {
 
 	Name string `json:"name,omitempty"`
 
@@ -27,25 +25,19 @@ type Event struct {
 
 	Url string `json:"url,omitempty"`
 
-	ChainId string `json:"chain_id,omitempty"`
-
-	ContextId string `json:"context_id,omitempty"`
-
-	ContextString string `json:"context_string,omitempty"`
-
-	IssuerKeyId string `json:"issuer_key_id,omitempty"`
+	AdminCode string `json:"admin_code,omitempty"`
 
 	StartDate time.Time `json:"start_date,omitempty"`
 
 	EndDate time.Time `json:"end_date,omitempty"`
 }
 
-// AssertEventRequired checks if the required fields are not zero-ed
-func AssertEventRequired(obj Event) error {
+// AssertCreateEventRequestRequired checks if the required fields are not zero-ed
+func AssertCreateEventRequestRequired(obj CreateEventRequest) error {
 	return nil
 }
 
-// AssertEventConstraints checks if the values respects the defined constraints
-func AssertEventConstraints(obj Event) error {
+// AssertCreateEventRequestConstraints checks if the values respects the defined constraints
+func AssertCreateEventRequestConstraints(obj CreateEventRequest) error {
 	return nil
 }
